# dotfiles

./: .gitignore  .vimrc  Makefile  bashrc  handy_programs.rst  movehome.sh  pre-commit  preferences.rst  setup.sh  start.txt  todolist.db  update.sh  vimrc  zman.md
bash/: .bashrc  zman.md
config/i3/: config
config/nvim/: .netrwhist
dotfiles/: bashrc  i3status.conf  pre-commit  setup.sh  tmux.conf  vimrc  zman.md
dotfiles/config/i3/: config
dotfiles/config/kitty/: kitty.conf
dotfiles/config/nvim/: .netrwhist
dotfiles/config/nvim/colors/: bzachscheme.vim  dzachscheme.vim
dotfiles/vim/colors/: zachscheme.vim
dotfiles/vim/syntax/: zman.vim
utils/: Makefile  jt.py  pyproject.toml  reference_jt.txt
utils/tests/: test_json_tables.py
utils/utils/: json_tables.py
vim/: .vimrc  zachscheme.vim  zman.vim
