[tool.poetry]
name = "utils"
version = "0.1.0"
description = "A collection of utilities"
authors = ["Zach Taira"]

[tool.poetry.dependencies]
python = "^3.7"
"ruamel.yaml" = "^0.16.5"
plumbum = "^1.6.8"

[tool.poetry.dev-dependencies]
astroid = "2.2.5"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.720"
pylint = "2.3.0"
pytest = "^5.0"
pytest-cov = "^2.7.1"
sphinx = "^2.1.0"
sphinx-autodoc-typehints = "^1.5.0"
tox = "^3.14"
reorder-python-imports = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
